--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                 </section>
                 <div class="indicaciones">
-                    <p>Pulsa el botón </p><img src="./assets/img/versus.png" alt="vs"><p> para una nueva batalla</p>
+                    <p>Pulsa </p><img src="./assets/img/versus.png" alt="vs"><p> para refrescar</p>
                 </div>
             </div>
         </header>
