--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             <div class="combate">
                 <!--HEROE 1-->
                 <section class="heroe1">
-                    <div class="ficha1">
+                    <div class="imagen1">
                         <div id="heroe1"></div>
+                    </div>
+                    <div class="ficha1">
                         <div id="nombre1"></div>
                             <hr>
                         <div id="nombreReal1"></div>
@@ -41,7 +43,7 @@
                     <!--STATS HEROE 1-->
                     <div class="stats1">
                         <h2>PowerStats!</h2>
-                        <hr style="color: white">
+                        <hr style="background-color: white">
                         <div id="int1"></div>
                         <div id="str1"></div>
                         <div id="spd1"></div>
@@ -56,8 +58,10 @@
                 </div>
                 <!--HEROE 2-->
                 <section class="heroe2">
-                    <div class="ficha2">
+                    <div class="imagen2">
                         <div id="heroe2"></div>
+                    </div>
+                    <div class="ficha2">
                         <div id="nombre2"></div>
                             <hr>
                         <div id="nombreReal2"></div>
@@ -69,7 +73,7 @@
                     <!--STATS HEROE 2-->
                     <div class="stats2">
                         <h2>PowerStats!</h2>
-                        <hr style="color: white">
+                        <hr style="background-color: white">
                         <div id="int2"></div>
                         <div id="str2"></div>
                         <div id="spd2"></div>
@@ -78,9 +82,9 @@
                         <div id="comb2"></div>
                     </div>
                 </section>
-                <div class="indicaciones">
-                    <p>Pulsa el botón </p><img src="./assets/img/versus.png" alt="vs"><p> para una nueva batalla</p>
-                </div>
+            </div>
+            <div class="indicaciones">
+                <p>Pulsa</p><img src="./assets/img/versus.png" alt="vs"><p> para refrescar</p>
             </div>
         </header>
         <!--SECCION ACERCA DE-->
@@ -91,7 +95,7 @@
                 </div>
                 <div class="acerca">
                     <h3>Acerca</h3>
-                    <hr style="color: yellow">
+                    <hr style="background-color: yellow">
                     <p>¡Hola a todos! Mi nombre es Sebastián Araos y ¡me encantan los comics! Desde pequeño jugaba con mis amigos un juego de mesa, específicamente de cartas, llamado Versus System. Podíamos pasar horas jugándolo, mezclando los universos de Marvel y DC, teniendo batallas ¡EPICAS!</p>
                     <p>Por un tiempo dejaron de venderlas en Chile y nosotros crecimos. Sin embargo, el gusto por los comics nunca desapareció. Hace poco encontré una API de superhéroes, y al instante se me vino a la mente la idea de esta página, por tiempo no lo había hecho hasta ahora (Que tengo una razón de peso para hacerla... y tiempo).</p>
                     <p>Esta Api es muy genial, porque mezcla no solo personajes de historietas, sino que también de algunas series de televisión y peliculas, las combinaciones son ¡INFINITAS! ¡Espero que lo disfruten!</p>
